# cfm-id

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cfm-boost-test/: CMakeLists.txt  main.cpp
cfm-boost-test/fraggen_tests/: FragGenPostiveESITests.cpp  FragGenTestsUtils.cpp  FragGenTestsUtils.h
cfm-code/: CMakeLists.txt  Comms.cpp  Comms.h  Config.cpp  Config.h  EmModel.cpp  EmModel.h  EmNNModel.cpp  EmNNModel.h  Feature.cpp  Feature.h  FeatureCalculator.cpp  FeatureCalculator.h  FeatureVector.cpp  FeatureVector.h  FragmentGraph.cpp  FragmentGraphGenerator.cpp  FragmentTreeNode.cpp  FragmentTreeNode.h  FunctionalGroups.cpp  FunctionalGroups.h  Isotope.cpp  Isotope.h  MILP.cpp  MILP.h  Message.cpp  Message.h  ModelBase.h  MolData.cpp  MolData.h  MspReader.cpp  MspReader.h  NNParam.cpp  NNParam.h  Param.cpp  Param.h  Solver.cpp  Solver.h  Spectrum.cpp  Spectrum.h  (+3 more)
cfm-code/Features/: BreakAtomPair.cpp  BreakAtomPair.h  BreakFuncitonalGroupFeature.cpp  BreakFuncitonalGroupFeature.h  BreakHistoryFeature.cpp  BreakHistoryFeature.h  BrokenOrigBondType.cpp  BrokenOrigBondType.h  ExtraRingFeatures.cpp  ExtraRingFeatures.h  FeatureHelper.cpp  FeatureHelper.h  FingerPrintFeature.cpp  FingerPrintFeature.h  FragmentFingerPrintFeature.h  FragmentFunctionalGroupFeature.h  FunctionalGroupFeature.cpp  FunctionalGroupFeature.h  GasteigerCharges.cpp  GasteigerCharges.h  HydrogenMovement.cpp  HydrogenMovement.h  HydrogenRemoval.cpp  HydrogenRemoval.h  IonExtraFunctionalGroupFeatures.cpp  IonExtraFunctionalGroupFeatures.h  IonFingerPrintFeature.cpp  IonFingerPrintFeature.h  IonFunctionalGroupFeatures.cpp  IonFunctionalGroupFeatures.h  IonFunctionalGroupFeaturesD2.cpp  IonFunctionalGroupFeaturesD2.h  IonFunctionalGroupRootOnlyFeatures.cpp  IonFunctionalGroupRootOnlyFeatures.h  IonNeighbourMMFFAtomType.cpp  IonNeighbourMMFFAtomType.h  IonRootAtom.cpp  IonRootAtom.h  IonRootEncodings.cpp  IonRootEncodings.h  (+50 more)
cfm-predict/: CMakeLists.txt  main.cpp
cfm-train/: CMakeLists.txt  main.cpp
cmake/: FindRDKit.cmake
